--- a/parameters.yml
+++ b/parameters.yml
@@ -8,7 +8,7 @@ products:
       - attribute: docversion
         value: "4.2"
       - attribute: minorversion
-        value: "4.2.1"
+        value: "4.2.4"
       - attribute: suma-content
         value: true
       - attribute: uyuni-content
@@ -163,6 +163,10 @@ asciidoc:
     value: true
   - attribute: sectlinks
     value: true
+  - attribute: sectnums
+    value: true
+  - attribute: sectnumlevels
+    value: 5
   - attribute: icons
     value: font  
   - attribute: experimental
@@ -331,7 +335,7 @@ asciidoc:
   - attribute: sourcedir
     value: .
   - attribute: source-highlighter
-    value: coderay
+    value: rouge
   - attribute: toc
     value: left
   - attribute: doctype
