--- a/branding/pdf/themes/suse-draft-theme_old.yml
+++ b/branding/pdf/themes/suse-draft-theme_old.yml
@@ -1,54 +1,40 @@
 ###
 ### This is the AsciiDoctor-PDF export template for SUSE Documentation
 ###
-### Joseph Cayouette (jcayouette@suse.com), 2021
+### Markus Napp (mnapp@suse.com), 2019
 ###
 
 # Define font catalog
 font:
   catalog:
-
-    #SUSE 2021 Font
-    Poppins:
-      normal: Poppins-Regular.ttf
-      bold: Poppins-Medium.ttf
-      italic: Poppins-Light.ttf
-      bold_italic: Poppins-BoldItalic.ttf
-
-    # SUSE 2019 Font
     Work Sans:
       normal: WorkSans-Regular.ttf
       bold: WorkSans-Medium.ttf
       italic: WorkSans-Light.ttf
-
     Free Serif:
       normal: freeserif.ttf
       bold: freeserif_bold.ttf
       italic: freeserif_italic.ttf
       bold_italic: freeserif_bold_italic.ttf
-
     Montserrat:
       normal: montserrat-normal.ttf
       bold: montserrat-bold.ttf
       italic: montserrat-italic.ttf
       bold_italic: montserrat-bold_italic.ttf
-
     # Noto Serif supports Latin, Latin-1 Supplement, Latin Extended-A, Greek, Cyrillic, Vietnamese & an assortment of symbols
     Noto Serif:
       normal: notoserif-regular-subset.ttf
       bold: notoserif-bold-subset.ttf
       italic: notoserif-italic-subset.ttf
       bold_italic: notoserif-bold_italic-subset.ttf
-
     # M+ 1mn supports ASCII and the circled numbers used for conums
     M+ 1mn:
       normal: mplus1mn-regular-ascii-conums.ttf
       bold: mplus1mn-bold-ascii.ttf
       italic: mplus1mn-italic-ascii.ttf
       bold_italic: mplus1mn-bold_italic-ascii.ttf
-
     # M+ 1p supports Latin, Latin-1 Supplement, Latin Extended, Greek, Cyrillic, Vietnamese, Japanese & an assortment of symbols
-    # Provides support for the following glyphs ->, <-, => and <=
+    # It also provides arrows for ->, <-, => and <= replacements in case these glyphs are missing from font
     M+ 1p Fallback:
       normal: mplus1p-regular-fallback.ttf
       bold: mplus1p-regular-fallback.ttf
@@ -58,10 +44,10 @@ font:
     - M+ 1p Fallback
 
 capfont:
-  font: Poppins Light
+  font: Work Sans Light
 
 brand:
-  font: Poppins
+  font: Work Sans
   #Free Serif
   # Colors from: https://www.suse.com/brandcentral/suse/identity.php#palette
   primary:
@@ -108,18 +94,17 @@ brand:
     text: #969494
     decoration: #F75C03
     decoration2: #841781
-
 # Configure style and layout of normal pages
 page:
+  #background_image: image:images/draft.jpg[]
   background_color: #ffffff
   layout: portrait
   margin: [20mm, 27mm, 27mm, 20mm]
+  # margin_inner and margin_outer keys are used for recto/verso print margins when media=press
   margin_inner: 20mm
   margin_outer: 15mm
   size: A4
-
 base:
-  align: justify
   font_size_xxxsmall:  6
   font_size_xxsmall:  7
   font_size_xsmall:  8
@@ -135,6 +120,7 @@ base:
   font_size_ultralarge: 36
   font_size_hyperlarge: 48
   font_size_min: $base_font_size_xxxsmall
+  align: justify
   # color as hex string (leading # is optional)
   font_color: 333333
   font_family: $brand_font
@@ -152,44 +138,35 @@ vertical_rhythm: $base_line_height_length
 horizontal_rhythm: $base_line_height_length
 # QUESTION should vertical_spacing be block_spacing instead?
 vertical_spacing: $vertical_rhythm
-
-# Links
 link:
-  font-color: $brand_primary_susejungle
-  font-family: Poppins
-  font-style: italic
-  font_size: $base_font_size_medium
-
+  font_color: $brand_elements_link
 # literal is currently used for inline monospaced in prose and table cells
 literal:
-  background-color: #ffffff
-  font-color: #0C322C
-  font-family: Poppins
+  background_color: $brand_primary_susefog200
+  #border_color: $brand_primary_suseseafoam20
+  border_radius: 2
+  border_width: 0.30
+  #font_family: M+ 1mn
+  font-family: Work Sans
   font-style: bold
   font_size: $base_font_size_xxsmall * 1.3
+  border-offset: 2
+  #border-width: .5
 
-ulist:
-  marker:
-    font_family: Poppins
-    font_size: 18
-    line_height: 0.4
-    margin: 10
-    font_color: $brand_primary_susejungle
-    disc:
-      content: "\u2022"
-      font_color: $brand_primary_susejungle
-
-menu_caret_content: " <font size=\"1.5em\"><color rgb=\"30BA78\">\u203a</color></font> "
+menu_caret_content: " <font size=\"1.15em\"><color rgb=\"30BA78\">\u203a</color></font> "
 
 heading:
   align: left
+  #font_color: 181818
   font_color: #000000
   font_family: $brand_font
   font_style: bold
+  # h1 is used for part titles (book doctype only)
   h1:
     font_color: $brand_primary_susepine
     font_size: $base_font_size_superlarge
     font_weight: normal
+  # h2 is used for chapter titles (book doctype only)
   h2:
     font_color: $brand_primary_susejungle
     font_size: $base_font_size_xxxlarge
@@ -209,76 +186,54 @@ heading:
   h6:
     font_color: $brand_primary_susejungle
     font_size: $base_font_size_medium
+  #line_height: 1.4
+  # correct line height for Noto Serif metrics (comes with built-in line height)
   line_height: 1
   margin_top: $vertical_rhythm * 0.4
   margin_bottom: $vertical_rhythm * 0.9
-
-# Configure layout and style of title page
-extends: default
-role:
-  title:
-    background-color: #90EBCD
-
-# Title Page
-title-page:
-  background-color: #ffffff
-  font-family: $brand_font
+# Configure style and layout of title page
+title_page:
+  background_color: $brand_primary_suseblu
+  background_image: image:images/title_bg_2020.png[pdfwidth=100%]
   align: left
-  #background_image: image:images/logo-cover.png[fit=none, pdfwidth=80%, position=top center]
-
-  # Logo
+  font-family: $brand_font
   logo:
-    top: 56%
-    align: center
-    image: image:images/logo-cover-2.png[pdfwidth=77%]
-
-  # Title
-  title:
-    font_color: #000
-    font-style: normal
-    top: 15%
-    font_size: $base_font_size_xxxlarge
-    line_height: 0.7
-
-  # Subtitle
+    align: left
+    top: 2%
+    image: image:images/SUSE_Logo-vert_S_Green-White-neg_sRGB.png[pdfwidth=20%]
   subtitle:
-    font_color: #30BA78
-    font_style: bold
-    line_height: .7
+    font_color: $brand_primary_susesalmon
+    font_size: $heading_h3_font_size
+    font_style: normal
+    line_height: 1
     margin_top: $base_font_size * 1.25
-    font_size: $base_font_size_ultralarge
-
-  # Authors
+  title:
+    font_color: #7AD4AA
+    top: 20%
+    font_size: $heading_h1_font_size
+    line_height: 0.9
   authors:
     font_color: ffffff
     margin_top: $base_font_size * 1.25
     font_size: $base_font_size
-  # Product version number and date
   revision:
-    line_height: .7
-    font-style: italic
-    font-color: #000
-    font-size: $heading_h5_font_size
-    margin-top: $base_font_size * 1.25
-
+    font_color: #F2F2F2
+    margin_top: $base_font_size * 1.25
 block:
   margin_top: 0
   margin_bottom: $vertical_rhythm
-
 caption:
   align: left
   font_size: $base_font_size_large
   font_style: bold
-  font_color: $brand_primary_susejungle
+  font_color: $brand_primary_susecoral
   # FIXME perhaps set line_height instead of / in addition to margins?
   margin_inside: $vertical_rhythm / 3
   #margin_inside: $vertical_rhythm / 4
   margin_outside: 0
-
 lead:
   font_size: $base_font_size_large
   line_height: 1.4
-
 abstract:
   font_color: 5c6266
   font_size: $lead_font_size
@@ -291,7 +246,6 @@ abstract:
     font_family: $heading_font_family
     font_size: $heading_h4_font_size
     font_style: $heading_font_style
-
 # Configure style of admonition boxes (Tip, Note, Warning etc.)
 admonition:
   column_rule_color: $brand_primary_susefog300
@@ -303,41 +257,39 @@ admonition:
     vertical_align: middle
     font_color: $brand_primary_suseblu
     font_family: $base_font_family
+  # Icons from https://github.com/jessedoyle/prawn-icon packaged with AsciiDoctor-PDF
+  # Shipped version is FontAwesome 5.4.x / https://fontawesome.com/v5.4.1/icons
   icon:
     tip:
       name: fa-lightbulb-o
       stroke_color: $brand_primary_susejungle
-      size: $base_font_size_xxxlarge
+      size: $base_font_size_ultralarge
     note:
       stroke_color: $brand_primary_susejungle
       name: fa-info-circle
-      size: $base_font_size_xxxlarge
+      size: $base_font_size_ultralarge
     important:
       name: fa-exclamation-circle
       stroke_color: $brand_primary_susecoral
-      size: $base_font_size_xxxlarge
+      size: $base_font_size_ultralarge
     warning:
       name: fa-exclamation-triangle
       stroke_color: $brand_primary_susecoral
-      size: $base_font_size_xxxlarge
+      size: $base_font_size_ultralarge
     caution:
       name: fa-fire
       stroke_color: $brand_elements_error
-      size: $base_font_size_xxxlarge
+      size: $base_font_size_ultralarge
 
-# GUI Buttons
 button:
   font-color: $brand_primary_susepine
   font-size: $base_font_size_normal
-  background-color: #F2F2F2
-  font-family: Poppins
-
-key:
-  separator: "\u2009+\u2009"
-  border-radius: 2
-  border-width: 1
-  font-color: $brand_primary_susepine
-  font-size: $base_font_size_medium
+  background-color: $brand_primary_susecoral
+  border-color: $brand_primary_susepine
+  border-radius: 3
+  border-offset: 2
+  border-width: .82
+  #border-width: 0.5
 
 blockquote:
   font_color: $base_font_color
@@ -348,55 +300,48 @@ blockquote:
   padding: [0, $horizontal_rhythm, $block_margin_bottom * -0.75, $horizontal_rhythm + $blockquote_border_width / 2]
   cite_font_size: $base_font_size_small
   cite_font_color: 999999
-
-# Code is used for source blocks
+# code is used for source blocks (perhaps change to source or listing?)
 code:
-  font_color: #0C322C
-  font_family: Poppins
-  font_size: ceil($base_font_size)
-  line_height: 1.0
-  line_gap: 0
-  border_radius: 2
-  padding: 6
-  border_color: #ffffff
-  background_color: #90EBCD
-
-# Conum
+  font_color: $brand_primary_susepine
+  font_family: $literal_font_family
+  font_size: $base_font_size_small
+  padding: $code_font_size
+  line_height: 1
+  background_color: $brand_primary_suseseafoam20
+  border_color: $brand_primary_suseseafoam
+  border_radius: $base_border_radius
+  border_width: 0.50
 conum:
   font_family: $literal_font_family
   font_color: $brand_primary_susegrn
   font_size: $base_font_size
   line_height: 4 / 3
-
-# Examples
 example:
   border_color: $base_border_color
   border_radius: $base_border_radius
   border_width: 0.75
   background_color: transparent
+  # FIXME reenable padding bottom once margin collapsing is implemented
   padding: [$vertical_rhythm, $horizontal_rhythm, 0, $horizontal_rhythm]
-
-# Images
 image:
   align: center
   border_color: $brand_primary_susepine
-
-# Prose
+  border_width: .4
+  border_radius: 3
 prose:
   margin_top: $block_margin_top
   margin_bottom: $block_margin_bottom
-
-# Sidebar
 sidebar:
-  background_color: EEEEEE
-  border_color: E1E1E1
+  border_color: $page_background_color
   border_radius: $base_border_radius
   border_width: $base_border_width
+  background_color: eeeeee
   # FIXME reenable padding bottom once margin collapsing is implemented
   padding: [$vertical_rhythm, $vertical_rhythm * 1.25, 0, $vertical_rhythm * 1.25]
   title:
     align: center
     font_color: $heading_font_color
+    font_family: $heading_font_family
     font_size: $heading_h4_font_size
     font_style: $heading_font_style
 thematic_break:
@@ -409,15 +354,11 @@ description_list:
   term_font_style: bold
   term_spacing: $vertical_rhythm / 4
   description_indent: $horizontal_rhythm * 1.25
-
-# Controls
-outline-list:
+outline_list:
   indent: $horizontal_rhythm * 1.5
-  marker-font-color: $brand_primary_susejungle
-  item-spacing: $vertical_rhythm / 2
-  marker-font-size: 18
-
-# Tables
+  #marker_font_color: 404040
+  # NOTE outline_list_item_spacing applies to list items that do not have complex content
+  item_spacing: $vertical_rhythm / 2
 table:
   background_color: $page_background_color
   head_background_color: f5f5f5
@@ -430,8 +371,6 @@ table:
   border_width: $base_border_width
   # HACK accounting for line-height
   cell_padding: [3, 3, 6, 3]
-
-# Table of Contents
 toc:
   title:
     font_color: $brand_primary_susepine
@@ -439,29 +378,34 @@ toc:
   font_family: $brand_font
   font_size: $base_font_size
   font_color: $brand_primary_susejungle
-  line_height: 1.7
+  line_height: 1.2
   dot_leader:
     content: ". "
     font_color: $brand_primary_susepine
     levels: 2 3 4 5 6
-  h1_font_color: $brand_primary_susepine
-  h1_font_size: $base_font_size_xlarge
 
-  h2_font_color: $brand_primary_susejungle
+  h1_font_color: $brand_primary_susepine
+  h1_font_size: $base_font_size_large
+
+  h2_font_color: $brand_primary_susepine
   h2_font_size: $base_font_size_large
 
-  h3_font_color: $brand_primary_susepine
-  h3_font_size: $base_font_size_medium
+  h3_font_color: $brand_primary_susejungle
+  h3_font_size: $base_font_size_small
 
-  h4_font_color: $brand_primary_susepine
-  h4_font_size: $base_font_size_medium
+  h4_font_color: $brand_primary_susejungle
+  h4_font_size: $base_font_size_small
 
-  h5_font_color: $brand_primary_susepine
-  h5_font_size: $base_font_size_medium
+  h5_font_color: $brand_primary_susejungle
+  h5_font_size: $base_font_size_small
 
+  #h2_text_decoration: underline
+  #h5_font_style: italic
+# NOTE in addition to footer, header is also supported
 header:
   font_size: $base_font_size_xsmall
   font_color: #adadad
+  # NOTE if background_color is set, background and border will span width of page
   border_color: dddddd
   border_width: 0.25
   height: 0.75in
@@ -483,9 +427,8 @@ header:
     right:
      content: $header_recto_right_content
 footer:
-  font-size: $base_font_size_xsmall
-  font-color: #000
-  font-style: italic
+  font_size: $base_font_size_xsmall
+  font_color: #adadad
   # NOTE if background_color is set, background and border will span width of page
   border_color: dddddd
   border_width: 0.25
@@ -503,25 +446,26 @@ footer:
   # * {chapter-title}
   # * {section-title}
   # * {section-or-chapter-title}
-
   recto:
     #columns: "<50% =0% >50%"
     left:
-      content: '{document-title} | {section-or-chapter-title} '
-
+      content: '*{page-number} / {page-count}*'
     center:
       content:
-
     right:
-      content:  '*{page-number} / {page-count}*'
-
+      content: '{section-or-chapter-title} | {productname} {productnumber}'
+      #content: ' | {page-number}'
+    #center:
+    #  content: '{page-number}'
   verso:
+    #columns: $footer_recto_columns
     left:
       content: $footer_recto_left_content
-
     center:
       content: $footer_recto_center_content
-
     right:
       content: $footer_recto_right_content
+      #content: '{page-number} | {chapter-title}'
+    #center:
+    #  content: '{page-number}'
 
