english theme patch

--- a/parameters.yml
+++ b/parameters.yml
@@ -11,7 +11,7 @@ products:
       - attribute: docversion
         value: "4.2"
       - attribute: minorversion
-        value: "4.2.0"
+        value: "4.2.4"
       - attribute: suma-content
         value: true
       - attribute: uyuni-content
@@ -181,6 +181,10 @@ asciidoc:
     value: true
   - attribute: sectlinks
     value: true
+  - attribute: sectnums
+    value: true
+  - attribute: sectnumlevels
+    value: 5
   - attribute: icons
     value: font  
   - attribute: experimental
@@ -349,7 +353,7 @@ asciidoc:
   - attribute: sourcedir
     value: .
   - attribute: source-highlighter
-    value: coderay
+    value: rouge
   - attribute: toc
     value: left
   - attribute: doctype
