--- a/branding/pdf/themes/suse-cjk-theme.yml
+++ b/branding/pdf/themes/suse-cjk-theme.yml
@@ -7,60 +7,78 @@
 # Define font catalog
 font:
   catalog:
+    #SUSE 2021 Font
+    Poppins:
+      normal: Poppins-Regular.ttf
+      bold: Poppins-Medium.ttf
+      italic: Poppins-Light.ttf
+      bold_italic: Poppins-BoldItalic.ttf
+
+    # SUSE 2019 Font
     Work Sans:
       normal: WorkSans-Regular.ttf
       bold: WorkSans-Medium.ttf
       italic: WorkSans-Light.ttf
+
     Free Serif:
       normal: freeserif.ttf
       bold: freeserif_bold.ttf
       italic: freeserif_italic.ttf
       bold_italic: freeserif_bold_italic.ttf
+
     Montserrat:
       normal: montserrat-normal.ttf
       bold: montserrat-bold.ttf
       italic: montserrat-italic.ttf
       bold_italic: montserrat-bold_italic.ttf
     # Noto Serif supports Latin, Latin-1 Supplement, Latin Extended-A, Greek, Cyrillic, Vietnamese & an assortment of symbols
+
     Noto Serif:
       normal: notoserif-regular-subset.ttf
       bold: notoserif-bold-subset.ttf
       italic: notoserif-italic-subset.ttf
       bold_italic: notoserif-bold_italic-subset.ttf
     # M+ 1mn supports ASCII and the circled numbers used for conums
+
     M+ 1mn:
       normal: mplus1mn-regular-ascii-conums.ttf
       bold: mplus1mn-bold-ascii.ttf
       italic: mplus1mn-italic-ascii.ttf
       bold_italic: mplus1mn-bold_italic-ascii.ttf
     # Google Fonts
+
     Roboto:
       normal: Roboto-Regular.ttf
       italic: Roboto-Italic.ttf
       bold: Roboto-Bold.ttf
       bold_italic: Roboto-BoldItalic.ttf
+
     Roboto Mono:
       normal: RobotoMono-Regular.ttf
       italic: RobotoMono-Italic.ttf
       bold: RobotoMono-Bold.ttf
       bold_italic: RobotoMono-BoldItalic.ttf
+
     Noto Sans CJK SC:
       normal: NotoSansCJKsc-Regular.ttf
       italic: NotoSansCJKsc-Light.ttf
       bold: NotoSansCJKsc-Bold.ttf
       bold_italic: NotoSansCJKsc-Medium.ttf
+
     M+ 1p Fallback:
       normal: mplus1p-regular-fallback.ttf
       bold: mplus1p-regular-fallback.ttf
       italic: mplus1p-regular-fallback.ttf
       bold_italic: mplus1p-regular-fallback.ttf
-  fallbacks: [Noto Sans CJK SC, Roboto, Work Sans]
+
+  fallbacks: [Noto Sans CJK SC, Roboto, Poppins]
 
 capfont:
   font: Noto Sans CJK SC
 
 brand:
   font: Noto Sans CJK SC
+
   #Free Serif
   # Colors from: https://www.suse.com/brandcentral/suse/identity.php#palette
   primary:
@@ -110,24 +128,22 @@ brand:
 
 # Configure style and layout of normal pages
 page:
-  #background_image: image:images/draft.jpg[]
   background_color: #ffffff
   layout: portrait
   margin: [20mm, 27mm, 27mm, 20mm]
-  # margin_inner and margin_outer keys are used for recto/verso print margins when media=press
   margin_inner: 20mm
   margin_outer: 15mm
   size: A4
+
 base:
-  align: left
-  font_color: 333333
-  font_family: Noto Sans CJK SC
+  align: justify
   font_size_xxxsmall: 6
   font_size_xxsmall: 7
   font_size_xsmall: 8
   font_size_small: 9.5
   font_size_normal: 9.5
   font_size_medium: 10.5
+  #11.15
   font_size_large: 12.5
   font_size_xlarge: 14
   font_size_xxlarge: 16
@@ -136,6 +152,9 @@ base:
   font_size_ultralarge: 36
   font_size_hyperlarge: 48
   font_size_min: $base_font_size_xxxsmall
+  # color as hex string (leading # is optional)
+  font_color: 333333
+  font_family: Noto Sans CJK SC
   font_style: normal
   font_size: $base_font_size_normal
   line_height_length: 13.8
@@ -143,132 +162,145 @@ base:
   border_color: #EEEEEE
   border_radius: 4
   border_width: 0.5
+
+# Configure layout and style of title page
+extends: default
 role:
-  line-through:
-    text_decoration: line-through
-  underline:
-    text_decoration: underline
-  big:
-    font_size: $base_font_size_large
-  small:
-    font_size: $base_font_size_small
-  subtitle:
-    font_size: 0.8em
-    font_color: 999999
-# FIXME vertical_rhythm is weird; we should think in terms of ems
-#vertical_rhythm: $base_line_height_length * 2 / 3
-# correct line height for Noto Serif metrics (comes with built-in line height)
+  title:
+    background-color: #90EBCD
+
 vertical_rhythm: $base_line_height_length
 horizontal_rhythm: $base_line_height_length
-# QUESTION should vertical_spacing be block_spacing instead?
 vertical_spacing: $vertical_rhythm
+
+# Links
 link:
-  font_color: #30BA78
+  font-color: $brand_primary_susejungle
+  font-family: Noto Sans CJK SC
+  font-style: italic
+  font_size: $base_font_size_medium
+
+# literal is currently used for inline monospaced in prose and table cells
 literal:
-  background-color: #F2F2F2
-  font-color: $brand_primary_susepine
-  font-size: $base_font_size_normal
+  background-color: #ffffff
+  font-color: #0C322C
   font-family: Noto Sans CJK SC
   font-style: bold
   font_size: $base_font_size_xxsmall * 1.3
 
-button:
-  font-color: $brand_primary_susepine
-  font-size: $base_font_size_normal
-  background-color: #F2F2F2
-  font-family: Noto Sans CJK SC
-key:
-  background_color: F5F5F5
-  border_color: CCCCCC
-  border_offset: 2
-  border_radius: 2
-  border_width: 0.5
-  font_family: Roboto Mono
-  separator: "\u202f+\u202f"
-mark:
-  background_color: FFFF00
-  border_offset: 1
-menu_caret_content: " <font size=\"1.15em\"><color rgb=\"30BA78\">\u203a</color></font> "
+ulist:
+  marker:
+    font_family: Poppins
+    font_size: 18
+    line_height: 0.4
+    margin: 10
+    font_color: $brand_primary_susejungle
+    disc:
+      content: "\u2022"
+      font_color: $brand_primary_susejungle
+
+menu_caret_content: " <font size=\"1.5em\"><color rgb=\"30BA78\">\u203a</color></font> "
+
 heading:
   align: left
-  #font_color: 181818
   font_color: #000000
-  font_family: $brand_font
+  font_family: Noto Sans CJK SC
   font_style: bold
-  # h1 is used for part titles (book doctype only)
   h1:
     font_color: $brand_primary_susepine
     font_size: $base_font_size_superlarge
     font_weight: normal
-  # h2 is used for chapter titles (book doctype only)
   h2:
-    font_color: #FF6A52
+    font_color: $brand_primary_susejungle
     font_size: $base_font_size_xxxlarge
     font_style: normal
   h3:
-    font_color: #FF6A52
+    font_color: $brand_primary_susejungle
     font_size: $base_font_size_xxlarge
     font_style: normal
   h4:
-    font_color: #FF6A52
+    font_color: $brand_primary_susejungle
     font_size: $base_font_size_xlarge
     font_style: normal
   h5:
-    font_color: #FF6A52
+    font_color: $brand_primary_susejungle
     font_size: $base_font_size_large
     font_style: normal
   h6:
-    font_color: #FF6A52
+    font_color: $brand_primary_susejungle
     font_size: $base_font_size_medium
-  #line_height: 1.4
-  # correct line height for Noto Serif metrics (comes with built-in line height)
   line_height: 1
   margin_top: $vertical_rhythm * 0.4
   margin_bottom: $vertical_rhythm * 0.9
-title_page:
-  background_color: $brand_primary_suseblu
-  background_image: image:images/title_bg_2020.png[pdfwidth=100%]
+
+mark:
+  background_color: FFFF00
+  border_offset: 1
+
+# Title Page
+title-page:
+  background-color: #ffffff
+  font-family: Noto Sans CJK SC
   align: left
-  font-family: $brand_font
+  #background_image: image:images/logo-cover.png[fit=none, pdfwidth=80%, position=top center]
+
+  # Logo
   logo:
-    align: left
-    top: 2%
-    image: image:images/SUSE_Logo-vert_S_Green-White-neg_sRGB.png[pdfwidth=20%]
-  subtitle:
-    font_color: $brand_primary_susesalmon
-    font_size: $heading_h3_font_size
-    font_style: normal
-    line_height: 1
-    margin_top: $base_font_size * 1.25
-    font-family: Work Sans
+    top: 56%
+    align: center
+    image: image:images/logo-cover-2.png[pdfwidth=77%]
+
+  # Title
   title:
-    font_color: #7AD4AA
-    top: 20%
-    font_size: $heading_h1_font_size
-    line_height: 0.9
-    font-family: $brand_font
+    font_color: #000
+    font-style: normal
+    top: 15%
+    font_size: $base_font_size_xxxlarge
+    line_height: 0.7
+    font-family: Noto Sans CJK SC
+
+  # Subtitle
+  subtitle:
+    font_color: #30BA78
+    font_style: bold
+    line_height: 1.0
+    margin_top: $base_font_size * 1.25
+    font_size: $base_font_size_ultralarge
+    font-family: Noto Sans CJK SC
+
+  # Authors
   authors:
     font_color: ffffff
     margin_top: $base_font_size * 1.25
     font_size: $base_font_size
+
+  # Product version number and date
   revision:
-    font_color: #F2F2F2
-    margin_top: $base_font_size * 1.25
+    line_height: .7
+    font-style: italic
+    font-family: Noto Sans CJK SC
+    font-color: #000
+    font-size: $heading_h5_font_size
+    margin-top: $base_font_size * 1.25
 
 block:
   margin_top: 0
   margin_bottom: $vertical_rhythm
+
 caption:
   align: left
-  font_size: $base_font_size * 0.95
-  font_style: italic
+  font_size: $base_font_size_large
+  font_style: bold
+  font_color: $brand_primary_susejungle
   # FIXME perhaps set line_height instead of / in addition to margins?
   margin_inside: $vertical_rhythm / 3
   #margin_inside: $vertical_rhythm / 4
   margin_outside: 0
+
 lead:
   font_size: $base_font_size_large
   line_height: 1.4
+
 abstract:
   font_color: 5c6266
   font_size: $lead_font_size
@@ -281,87 +313,103 @@ abstract:
     font_family: $heading_font_family
     font_size: $heading_h4_font_size
     font_style: $heading_font_style
+
+# Configure style of admonition boxes (Tip, Note, Warning etc.)
 admonition:
   column_rule_color: $brand_primary_susefog300
   column_rule_width: 2.5
   column_rule_style: dotted
-  padding: [ 0, $horizontal_rhythm, 0, $horizontal_rhythm ]
+  padding: [0, $horizontal_rhythm, 0, $horizontal_rhythm]
   label:
     align: center
     vertical_align: middle
     font_color: $brand_primary_suseblu
-    font_family: $base_font_family
-  # Icons from https://github.com/jessedoyle/prawn-icon packaged with AsciiDoctor-PDF
-  # Shipped version is FontAwesome 5.4.x / https://fontawesome.com/v5.4.1/icons
+    font_family: Noto Sans CJK SC
   icon:
     tip:
       name: fa-lightbulb-o
       stroke_color: $brand_primary_susejungle
-      size: $base_font_size_ultralarge
+      size: $base_font_size_xxxlarge
     note:
       stroke_color: $brand_primary_susejungle
       name: fa-info-circle
-      size: $base_font_size_ultralarge
+      size: $base_font_size_xxxlarge
     important:
       name: fa-exclamation-circle
       stroke_color: $brand_primary_susecoral
-      size: $base_font_size_ultralarge
+      size: $base_font_size_xxxlarge
     warning:
       name: fa-exclamation-triangle
       stroke_color: $brand_primary_susecoral
-      size: $base_font_size_ultralarge
+      size: $base_font_size_xxxlarge
     caution:
       name: fa-fire
       stroke_color: $brand_elements_error
-      size: $base_font_size_ultralarge
+      size: $base_font_size_xxxlarge
+
+# GUI Buttons
+button:
+  font-color: $brand_primary_susepine
+  font-size: $base_font_size_normal
+  background-color: #F2F2F2
+  font-family: Noto Sans CJK SC
+
+key:
+  separator: "\u2009+\u2009"
+  border-radius: 2
+  border-width: 1
+  font-color: $brand_primary_susepine
+  font-size: $base_font_size_medium
+
 blockquote:
+  font_color: $base_font_color
   font_size: $base_font_size_large
   border_color: $base_border_color
-  border_width: 0
-  border_left_width: 5
+  border_width: 5
   # FIXME disable negative padding bottom once margin collapsing is implemented
-  padding: [0, $horizontal_rhythm, $block_margin_bottom * -0.75, $horizontal_rhythm + $blockquote_border_left_width / 2]
+  padding: [0, $horizontal_rhythm, $block_margin_bottom * -0.75, $horizontal_rhythm + $blockquote_border_width / 2]
   cite_font_size: $base_font_size_small
   cite_font_color: 999999
-verse:
-  font_size: $blockquote_font_size
-  border_color: $blockquote_border_color
-  border_width: $blockquote_border_width
-  border_left_width: $blockquote_border_left_width
-  padding: $blockquote_padding
-  cite_font_size: $blockquote_cite_font_size
-  cite_font_color: $blockquote_cite_font_color
+
 # code is used for source blocks (perhaps change to source or listing?)
+# Code is used for source blocks
 code:
-  font_color: $base_font_color
-  font_family: Roboto Mono
+  font_color: #0C322C
+  font_family: $brand_font
   font_size: ceil($base_font_size)
-  padding: $code_font_size
-  line_height: 1.25
-  # line_gap is an experimental property to control how a background color is applied to an inline block element
-  line_gap: 3.8
-  background_color: F5F5F5
-  #border_color: CCCCCC
-  #border_radius: $base_border_radius
-  #border_width: 0.75
+  line_height: 1.0
+  line_gap: 0
+  border_radius: 2
+  padding: 6
+  border_color: #ffffff
+  background_color: #90EBCD  #border_width: 0.75
+
+# Conum
 conum:
-  font_family: Roboto Mono
-  #font_color: $literal_font_color
+  font_family: $literal_font_family
+  font_color: $brand_primary_susegrn
   font_size: $base_font_size
   line_height: 4 / 3
-  glyphs: circled
+
+# Examples
 example:
   border_color: $base_border_color
   border_radius: $base_border_radius
   border_width: 0.75
-  background_color: $page_background_color
-  # FIXME reenable padding bottom once margin collapsing is implemented
+  background_color: transparent
   padding: [$vertical_rhythm, $horizontal_rhythm, 0, $horizontal_rhythm]
+
+# Images
 image:
-  align: left
+  align: center
+  border_color: $brand_primary_susepine
+
+# Prose
 prose:
   margin_top: $block_margin_top
   margin_bottom: $block_margin_bottom
+
+# Sidebar
 sidebar:
   background_color: EEEEEE
   border_color: E1E1E1
@@ -374,34 +422,41 @@ sidebar:
     font_color: $heading_font_color
     font_size: $heading_h4_font_size
     font_style: $heading_font_style
+
 thematic_break:
   border_color: $base_border_color
   border_style: solid
   border_width: $base_border_width
   margin_top: $vertical_rhythm * 0.5
   margin_bottom: $vertical_rhythm * 1.5
+
 description_list:
   term_font_style: bold
   term_spacing: $vertical_rhythm / 4
   description_indent: $horizontal_rhythm * 1.25
-outline_list:
+
+# Controls
+outline-list:
   indent: $horizontal_rhythm * 1.5
-  #marker_font_color: 404040
-  # NOTE outline_list_item_spacing applies to list items that do not have complex content
-  item_spacing: $vertical_rhythm / 2
+  marker-font-color: $brand_primary_susejungle
+  item-spacing: $vertical_rhythm / 2
+  marker-font-size: 18
+
+# Tables
 table:
   background_color: $page_background_color
-  border_color: DDDDDD
+  head_background_color: f5f5f5
+  head_font_color: $base_font_color
+  head_font_style: bold
+  even_row_background_color: f9f9f9
+  #odd_row_background_color: <hex value>
+  foot_background_color: f0f0f0
+  border_color: dddddd
   border_width: $base_border_width
-  cell_padding: 3
-  head:
-    font_style: bold
-    border_bottom_width: $base_border_width * 2.5
-    font_color: #FF6A52
-  body:
-    stripe_background_color: F9F9F9
-  foot:
-    background_color: F0F0F0
+  # HACK accounting for line-height
+  cell_padding: [3, 3, 6, 3]
+
+# Table of Contents
 toc:
   title:
     font_color: $brand_primary_susepine
@@ -409,33 +464,29 @@ toc:
   font_family: $brand_font
   font_size: $base_font_size
   font_color: $brand_primary_susejungle
-  line_height: 1.2
+  line_height: 1.7
   dot_leader:
     content: ". "
-    font_color: #FF6A52
+    font_color: $brand_primary_susepine
     levels: 2 3 4 5 6
+  h1_font_color: $brand_primary_susepine
+  h1_font_size: $base_font_size_xlarge
 
-  h1_font_color: #FF6A52
-  h1_font_size: $base_font_size_large
-
-  h2_font_color: #FF6A52
+  h2_font_color: $brand_primary_susejungle
   h2_font_size: $base_font_size_large
 
-  h3_font_color: #FF6A52
-  h3_font_size: $base_font_size_small
+  h3_font_color: $brand_primary_susepine
+  h3_font_size: $base_font_size_medium
 
-  h4_font_color: #FF6A52
-  h4_font_size: $base_font_size_small
+  h4_font_color: $brand_primary_susepine
+  h4_font_size: $base_font_size_medium
 
-  h5_font_color: #FF6A52
-  h5_font_size: $base_font_size_small
-#footnotes:
-#  font_size: round($base_font_size * 0.75)
-#  item_spacing: $outline_list_item_spacing / 2
+  h5_font_color: $brand_primary_susepine
+  h5_font_size: $base_font_size_medium
+
 header:
   font_size: $base_font_size_xsmall
   font_color: #adadad
-  # NOTE if background_color is set, background and border will span width of page
   border_color: dddddd
   border_width: 0.25
   height: 0.75in
@@ -457,8 +508,9 @@ header:
     right:
       content: $header_recto_right_content
 footer:
-  font_size: $base_font_size_xsmall
-  font_color: #adadad
+  font-size: $base_font_size_xsmall
+  font-color: #000
+  font-style: italic
   # NOTE if background_color is set, background and border will span width of page
   border_color: dddddd
   border_width: 0.25
@@ -467,17 +519,33 @@ footer:
   padding: [$base_line_height_length / 0, 0, 0, 0]
   vertical_align: top
   image_vertical_align: middle
+  #image_vertical_align: <alignment> or <number>
+  # additional attributes for content:
+  # * {page-count}
+  # * {page-number}
+  # * {document-title}
+  # * {document-subtitle}
+  # * {chapter-title}
+  # * {section-title}
+  # * {section-or-chapter-title}
+
   recto:
+    #columns: "<50% =0% >50%"
     left:
-      content: '*{page-number} / {page-count}*'
+      content: '{document-title} | {section-or-chapter-title} '
+
     center:
       content:
+
     right:
-      content: '{section-or-chapter-title} | {productname} {productnumber}'
+      content:  '*{page-number} / {page-count}*'
+
   verso:
     left:
       content: $footer_recto_left_content
+
     center:
       content: $footer_recto_center_content
+
     right:
       content: $footer_recto_right_content
