--- a/branding/pdf/themes/suse-cjk-theme.yml
+++ b/branding/pdf/themes/suse-cjk-theme.yml
@@ -164,10 +164,7 @@ base:
   border_width: 0.5
 
 # Configure layout and style of title page
-extends: default
-role:
-  title:
-    background-color: #90EBCD
+
 
 vertical_rhythm: $base_line_height_length
 horizontal_rhythm: $base_line_height_length
@@ -237,35 +234,43 @@ mark:
   background_color: FFFF00
   border_offset: 1
 
+extends: default
+role:
+  title:
+    background-color: #30BA78
+    padding: 100
+
 # Title Page
 title-page:
-  background-color: #ffffff
+  background-color: #fff
   font-family: Noto Sans CJK SC
   align: left
-  #background_image: image:images/logo-cover.png[fit=none, pdfwidth=80%, position=top center]
+  background_image: image:images/cloud.jpeg[fit=none, pdfwidth=100%, position=center]
 
   # Logo
   logo:
-    top: 56%
-    align: center
-    image: image:images/logo-cover-2.png[pdfwidth=77%]
+    top: 90%
+    align: right
+    image: image:images/suse-vert-forlight.svg[pdfwidth=15%]
 
   # Title
   title:
-    font_color: #000
+    font_color: #fff
     font-style: normal
-    top: 15%
+    top: 5%
+    padding: 10
     font_size: $base_font_size_xxxlarge
-    line_height: 0.7
-    font-family: Noto Sans CJK SC
+    line_height: .7
+    margin-bottom: 10
+    font-family: Poppins
 
   # Subtitle
   subtitle:
-    font_color: #30BA78
+    font_color: #0C322C
     font_style: bold
-    line_height: 1.0
+    line_height: 1
     margin_top: $base_font_size * 1.25
-    font_size: $base_font_size_ultralarge
+    font_size: $base_font_size_superlarge
     font-family: Noto Sans CJK SC
 
   # Authors
@@ -278,10 +283,11 @@ title-page:
   revision:
     line_height: .7
     font-style: italic
+    margin-top: 18
     font-family: Noto Sans CJK SC
-    font-color: #000
+    font-color: #0C322C
     font-size: $heading_h5_font_size
-    margin-top: $base_font_size * 1.25
+    #margin-top: $base_font_size * 1.25
 
 block:
   margin_top: 0
@@ -470,10 +476,10 @@ toc:
     font_color: $brand_primary_susepine
     levels: 2 3 4 5 6
   h1_font_color: $brand_primary_susepine
-  h1_font_size: $base_font_size_xlarge
+  h1_font_size: $base_font_size_xxlarge
 
   h2_font_color: $brand_primary_susejungle
-  h2_font_size: $base_font_size_large
+  h2_font_size: $base_font_size_xlarge
 
   h3_font_color: $brand_primary_susepine
   h3_font_size: $base_font_size_medium
@@ -482,7 +488,7 @@ toc:
   h4_font_size: $base_font_size_medium
 
   h5_font_color: $brand_primary_susepine
-  h5_font_size: $base_font_size_medium
+  h5_font_size: $base_font_size_small
 
 header:
   font_size: $base_font_size_xsmall
