--- a/parameters.yml
+++ b/parameters.yml
@@ -179,6 +179,10 @@ asciidoc:
     value: 15.3
   - attribute: linkattrs
     value: true
+  - attribute: sectnumlevels
+    value: 5
+  - attribute: sectnums
+    value: true
   - attribute: sectlinks
     value: true
   - attribute: sectnums
@@ -353,7 +357,9 @@ asciidoc:
   - attribute: sourcedir
     value: .
   - attribute: source-highlighter
-    value: rouge
+    value: coderay
+  - attribute: toclevels
+    value: 3
   - attribute: toc
     value: left
   - attribute: doctype
