--- a/branding/pdf/themes/suse-draft-theme.yml
+++ b/branding/pdf/themes/suse-draft-theme.yml
@@ -77,6 +77,10 @@ brand:
     susesalmon: #FF8E77
     susegrn: #30BA78
     suseblu: #0C322C
+    midnightblue: #192072
+    bluewaterhole: #2453FF
+    mint: #90EBCD
+    persimmon: #FE7C3F
   preferred:
     lime: #A0FF5F
     grass: #00C081
@@ -217,49 +221,54 @@ heading:
 extends: default
 role:
   title:
-    background-color: #90EBCD
+    background-color: #30BA78
+    padding: 20px
 
 # Title Page
 title-page:
-  background-color: #ffffff
+  background-color: #fff
   font-family: $brand_font
   align: left
-  #background_image: image:images/logo-cover.png[fit=none, pdfwidth=80%, position=top center]
+  background_image: image:images/cloud.jpeg[fit=none, pdfwidth=100%, position=center]
 
   # Logo
   logo:
-    top: 56%
-    align: center
-    image: image:images/logo-cover-2.png[pdfwidth=77%]
+    top: 90%
+    align: right
+    image: image:images/suse-vert-forlight.svg[pdfwidth=15%]
 
   # Title
   title:
-    font_color: #000
+    font_color: #fff
     font-style: normal
-    top: 15%
+    top: 5%
     font_size: $base_font_size_xxxlarge
-    line_height: 0.7
+    line_height: .7
+    margin-bottom: 10
+    font-family: Poppins
 
   # Subtitle
   subtitle:
-    font_color: #30BA78
+    font_color: #0C322C
     font_style: bold
     line_height: .7
     margin_top: $base_font_size * 1.25
-    font_size: $base_font_size_ultralarge
+    font_size: $base_font_size_superlarge
+    font-family: Poppins
 
   # Authors
   authors:
-    font_color: ffffff
+    font_color: #ffffff
     margin_top: $base_font_size * 1.25
     font_size: $base_font_size
   # Product version number and date
   revision:
     line_height: .7
+    margin-top: 18
     font-style: italic
-    font-color: #000
+    font-color: #0C322C
     font-size: $heading_h5_font_size
-    margin-top: $base_font_size * 1.25
+    #margin-top: $base_font_size * 1.25
 
 block:
   margin_top: 0
@@ -439,16 +448,16 @@ toc:
   font_family: $brand_font
   font_size: $base_font_size
   font_color: $brand_primary_susejungle
-  line_height: 1.7
+  line_height: 1.0
   dot_leader:
     content: ". "
     font_color: $brand_primary_susepine
     levels: 2 3 4 5 6
   h1_font_color: $brand_primary_susepine
-  h1_font_size: $base_font_size_xlarge
+  h1_font_size: $base_font_size_xxlarge
 
   h2_font_color: $brand_primary_susejungle
-  h2_font_size: $base_font_size_large
+  h2_font_size: $base_font_size_xlarge
 
   h3_font_color: $brand_primary_susepine
   h3_font_size: $base_font_size_medium
@@ -457,7 +466,7 @@ toc:
   h4_font_size: $base_font_size_medium
 
   h5_font_color: $brand_primary_susepine
-  h5_font_size: $base_font_size_medium
+  h5_font_size: $base_font_size_small
 
 header:
   font_size: $base_font_size_xsmall
