Added chapter for SUMA Quick start.

--- a/parameters.yml
+++ b/parameters.yml
@@ -27,6 +27,7 @@ products:
       - name: "large-deployments"
       - name: "quickstart-public-cloud"
       - name: "quickstart-sap"
+      - name: "quickstart-server"
     site:
       - attribute: title
         value: "SUSE Manager Documentation"
@@ -76,7 +77,7 @@ products:
       - name: "large-deployments"
       - name: "quickstart-public-cloud"
       - name: "quickstart-sap"
-      - name: "quickstart-uyuni"
+      - name: "quickstart-server"
     site:
       - attribute: title
         value: "Uyuni Documentation"
