Added Quick Start.

--- a/parameters.yml
+++ b/parameters.yml
@@ -17,6 +17,7 @@ products:
       - attribute: uyuni-content
         value: false
     sections: #Used by configure script to create book targets for each language.
+      - name: "quickstart"
       - name: "installation"
       - name: "client-configuration"
       - name: "upgrade"
@@ -66,6 +67,7 @@ products:
       - attribute: uyuni-content
         value: true
     sections: #Used by configure script to create book targets for each language.
+      - name: "quickstart"
       - name: "installation"
       - name: "client-configuration"
       - name: "upgrade"
