--- a/parameters.yml
+++ b/parameters.yml
@@ -17,6 +17,7 @@ products:
       - attribute: uyuni-content
         value: false
     sections: #Used by configure script to create book targets for each language.
+      - name: "quickstart"
       - name: "installation"
       - name: "client-configuration"
       - name: "upgrade"
@@ -66,6 +67,7 @@ products:
       - attribute: uyuni-content
         value: true
     sections: #Used by configure script to create book targets for each language.
+      - name: "quickstart"
       - name: "installation"
       - name: "client-configuration"
       - name: "upgrade"
@@ -76,7 +78,6 @@ products:
       - name: "large-deployments"
       - name: "quickstart-public-cloud"
       - name: "quickstart-sap"
-      - name: "quickstart-uyuni"
     site:
       - attribute: title
         value: "Uyuni Documentation"
