--- a/.github/workflows/feature_tests_uyuni.yml
+++ b/.github/workflows/feature_tests_uyuni.yml
@@ -56,7 +56,8 @@ jobs:
     - name: '[TEST] Validate Antora XREFS'
       run: |
         make configure-suma
-        NODE_PATH="$(npm ls -g --parseable @antora/site-generator-default)/node_modules" antora --generator @antora/xref-validator site.yml
+        NODE_PATH="$(npm -g root)" antora --generator @antora/xref-validator site.yml
+      #NODE_PATH="$(npm ls -g --parseable @antora/site-generator-default)/node_modules" antora --generator @antora/xref-validator site.yml
       #NODE_PATH="$(npm -g root)" antora --generator @antora/xref-validator site.yml
 
     - name: '[BUILD] SUMA Docs with Lunr/Antora Custom Docker Image'
