--- a/.github/workflows/feature_tests_uyuni.yml
+++ b/.github/workflows/feature_tests_uyuni.yml
@@ -48,7 +48,7 @@ jobs:
       run: |
         npm i -g @antora/cli@2.2 
         npm i -g @antora/site-generator-default@2.2
-        npm i -g gitlab:antora/xref-validator
+        npm i -g gitlab:antora/xref-validator#v1.0.0-alpha.14
 
     - name: '[TOOLCHAIN] Lunr/Antora Custom Docker Image'
       run: docker build -t lunr/antora:custom -f Dockerfile.custom .
@@ -56,9 +56,7 @@ jobs:
     - name: '[TEST] Validate Antora XREFS'
       run: |
         make configure-suma
-        NODE_PATH="$(npm -g root)" antora --generator @antora/xref-validator site.yml
-      #NODE_PATH="$(npm ls -g --parseable @antora/site-generator-default)/node_modules" antora --generator @antora/xref-validator site.yml
-      #NODE_PATH="$(npm -g root)" antora --generator @antora/xref-validator site.yml
+        NODE_PATH="$(npm ls -g --parseable @antora/site-generator-default)/node_modules" antora --generator @antora/xref-validator site.yml
 
     - name: '[BUILD] SUMA Docs with Lunr/Antora Custom Docker Image'
       run: |
