--- a/.github/workflows/find_unused.yml
+++ b/.github/workflows/find_unused.yml
@@ -10,4 +10,4 @@ jobs:
      uses: actions/checkout@v2
 
    - name: Look for unused files
-     run: ./find_unused administration client-configuration cookbook installation-and-upgrade quickstart reference retail specialized-guides
+     run: ./find_unused administration client-configuration common-workflows installation-and-upgrade quickstart reference retail specialized-guides
