added cw to parameters.yml

--- a/parameters.yml
+++ b/parameters.yml
@@ -21,8 +21,9 @@ products:
       - name: "installation-and-upgrade"
       - name: "client-configuration"
       - name: "administration"
-      - name: "retail"
       - name: "reference"
+      - name: "retail"
+      - name: "common-workflows"
       - name: "specialized-guides"
     site:
       - attribute: title
@@ -67,8 +68,9 @@ products:
       - name: "installation-and-upgrade"
       - name: "client-configuration"
       - name: "administration"
-      - name: "retail"
       - name: "reference"
+      - name: "retail"
+      - name: "common-workflows"
       - name: "specialized-guides"
     site:
       - attribute: title
