fixed broken xref

--- a/parameters.yml
+++ b/parameters.yml
@@ -99,16 +99,16 @@ languages: #language parameters
     gnudateformat: "%B %d %Y"
     pdf_theme_suma: "suse-draft"
     pdf_theme_uyuni: "uyuni"
-  - langcode: "cs"
-    locale: "cs_CZ.UTF-8"
-    gnudateformat: "%B %d %Y"
-    pdf_theme_suma: "suse-draft"
-    pdf_theme_uyuni: "uyuni"
-  - langcode: "es"
-    locale: "es_ES.UTF-8"
-    gnudateformat: "%e de %B de%Y"
-    pdf_theme_suma: "suse-draft"
-    pdf_theme_uyuni: "uyuni"
+  # - langcode: "cs"
+  #   locale: "cs_CZ.UTF-8"
+  #   gnudateformat: "%B %d %Y"
+  #   pdf_theme_suma: "suse-draft"
+  #   pdf_theme_uyuni: "uyuni"
+  # - langcode: "es"
+  #   locale: "es_ES.UTF-8"
+  #   gnudateformat: "%e de %B de%Y"
+  #   pdf_theme_suma: "suse-draft"
+  #   pdf_theme_uyuni: "uyuni"
   - langcode: "ja"
     locale: "ja_JP.UTF-8"
     gnudateformat: "%Y年%m月%e日"
