--- a/.github/workflows/translation_tests_ko_KR.yml
+++ b/.github/workflows/translation_tests_ko_KR.yml
@@ -29,8 +29,9 @@ jobs:
 
     - name: '[TOOLCHAIN] po4a'
       run: |
-        sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E77D14FE3C9A28E588A34E7469977F2B42813EC6
-        sudo add-apt-repository ppa:pgquiles/uyuni
+        wget https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Utils/xUbuntu_20.04/Release.key
+        sudo apt-key add Release.key
+        sudo add-apt-repository -y -u 'deb https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Utils/xUbuntu_20.04/ ./'
         sudo apt-get install -y po4a
 
     - name: '[TOOLCHAIN] Install Asciidoctor and Asciidoctor PDF'
