--- a/.github/workflows/feature_tests_uyuni.yml
+++ b/.github/workflows/feature_tests_uyuni.yml
@@ -43,7 +43,7 @@ jobs:
       run: |
         npm i -g @antora/cli@2.2 
         npm i -g @antora/site-generator-default@2.2
-        npm i -g gitlab:antora/xref-validator
+        npm i -g gitlab:antora/xref-validator#v1.0.0-alpha.12
     - name: '[TOOLCHAIN] Lunr/Antora Custom Docker Image'
       run: docker build -t lunr/antora:custom -f Dockerfile.custom .
 
