add Minimal entities

--- a/parameters.yml
+++ b/parameters.yml
@@ -282,6 +282,10 @@ asciidoc:
     value: Web UI
   - attribute: jeos
     value: JeOS
+  - attribute: minimal
+    value: Minimal
+  - attribute: minimalsles
+    value: Minimal SLES
   - attribute: scc
     value: SUSE Customer Center
   - attribute: ncc
