Tidying up mentions of the Unified Installer.

--- a/parameters.yml
+++ b/parameters.yml
@@ -214,6 +214,8 @@ asciidoc:
     value: SUSE Linux Enterprise Server with Expanded Support
   - attribute: sleda
     value: SLED
+  - attribute: unifiedinstaller
+    value: Unified Installer 
     # Clients
   - attribute: alibabaclo
     value: 'Alibaba Cloud Linux'
