--- a/.github/workflows/ifeval_check.yml
+++ b/.github/workflows/ifeval_check.yml
@@ -10,4 +10,4 @@ jobs:
      uses: actions/checkout@v2
 
    - name: Check ifeval syntax
-     run: ifeval_routine -c
+     run: ./ifeval_routine -c
