add nav comment check

--- a/.github/workflows/enforcing_checkstyle.yml
+++ b/.github/workflows/enforcing_checkstyle.yml
@@ -10,4 +10,7 @@ jobs:
      uses: actions/checkout@v2
 
    - name: Check ifeval syntax
-     run: ./ifeval_routine.sh -c
+     run: ./enforcing_checkstyle.sh -i
+
+   - name: Check comments on nav file
+     run: ./enforcing_checkstyle.sh -c
