--- a/.github/workflows/enforcing_checkstyle.yml
+++ b/.github/workflows/enforcing_checkstyle.yml
@@ -10,7 +10,7 @@ jobs:
      uses: actions/checkout@v2
 
    - name: Check ifeval syntax
-     run: ./enforcing_checkstyle.sh -i
+     run: find -name "*\.adoc" -type f  | xargs -I {} ./enforcing_checkstyle --filename {} --ifeval
 
    - name: Check comments on nav file
-     run: ./enforcing_checkstyle.sh -c
+     run: find -name "nav*\.adoc" -type f  | xargs -I {} ./enforcing_checkstyle --filename {} --comment
