removed legacy diff file, updated gitignore, updated makefile

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 branding/locale/entities.specific.adoc
 branding/pdf/entities.adoc
 site.yml
+node_modules
+build/
+translations/
+package-lock.json
+package.json
