--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -7,7 +7,6 @@ on:
 
 env:
   LANG: "en_US.UTF-8"
-  NODE: export NODE_OPTIONS="--max-old-space-size=8192"
 
 jobs:
   build:
@@ -64,6 +63,7 @@ jobs:
 
     - name: '[BUILD] UYUNI Docs with Lunr/Antora Custom Docker Image'
       run: |
+        export NODE_OPTIONS: "--max_old_space_size=8096"
         make configure-uyuni
         docker run -u $UID --privileged -e DOCSEARCH_ENABLED=true -e DOCSEARCH_ENGINE=lunr -v $GITHUB_WORKSPACE:/antora/ --rm -t lunr/antora:custom site.yml --generator antora-site-generator-lunr
         #cd build/
