--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -55,11 +55,10 @@ jobs:
     - name: '[TOOLCHAIN] Lunr/Antora Custom Docker Image'
       run: docker build -t lunr/antora:custom -f Dockerfile.custom .
 
-    - name: '[TEST] Validate Antora XREFS'
-      run: |
-        make configure-uyuni
-        NODE_PATH="$(npm ls -g --parseable @antora/site-generator-default)/node_modules" antora --generator @antora/xref-validator site.yml
-      #NODE_PATH="$(npm -g root)" antora --generator @antora/xref-validator site.yml
+    #- name: '[TEST] Validate Antora XREFS'
+    #  run: |
+    #    make configure-uyuni
+    #    NODE_PATH="$(npm ls -g --parseable @antora/site-generator-default)/node_modules" antora --generator @antora/xref-validator site.yml
 
     - name: '[BUILD] UYUNI Docs with Lunr/Antora Custom Docker Image'
       run: |
