--- a/Dockerfile.custom
+++ b/Dockerfile.custom
@@ -1,5 +1,5 @@
-FROM antora/antora:2.2.0
+FROM antora/antora:3.1.0
 
-RUN yarn global add antora-site-generator-lunr
+#RUN yarn global add antora-site-generator-lunr
 
 
