add sll : SUSE Liberty Linux

--- a/parameters.yml
+++ b/parameters.yml
@@ -200,6 +200,8 @@ asciidoc:
     value: "SUSE Linux Enterprise"
   - attribute: es
     value: Expanded Support
+  - attribute: sll
+    value: 'SUSE Liberty Linux'
   - attribute: micro
     value: 'SLE Micro'
   - attribute: microos
