--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -22,9 +22,9 @@ jobs:
         ruby-version: '2.6'
 
     - name: '[TOOLCHAIN] Set up NodeJS'
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: '16.x'
+        node-version: 12
 
     - name: '[TOOLCHAIN] po4a'
       run: |
