--- a/parameters.yml
+++ b/parameters.yml
@@ -198,6 +198,8 @@ asciidoc:
     value: "SUSE Linux Enterprise Server"
   - attribute: sle
     value: "SUSE Linux Enterprise"
+  - attribute: sll
+    value: "SUSE Liberty Linux"
   - attribute: es
     value: Expanded Support
   - attribute: micro
