--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -16,10 +16,10 @@ jobs:
     - name: '[CHECKOUT] Master'
       uses: actions/checkout@v3
 
-    - name: '[TOOLCHAIN] Set up Ruby 2.7'
+    - name: '[TOOLCHAIN] Set up Ruby 3.0'
       uses: actions/setup-ruby@v1
       with:
-        ruby-version: 2.7.x
+        ruby-version: '3.0'
 
     - name: '[TOOLCHAIN] Set up NodeJS'
       uses: actions/setup-node@v1
