update for styles

--- a/Makefile.en
+++ b/Makefile.en
@@ -40,7 +40,7 @@ prepare-antora-suma-en: copy-branding-en set-html-language-selector-suma-en
 	cd $(current_dir)
 
 .PHONY: antora-suma-en
-antora-suma-en: prepare-antora-suma-en pdf-all-suma-en pdf-tar-suma-en
+antora-suma-en: prepare-antora-suma-en #pdf-all-suma-en pdf-tar-suma-en
 	$(call antora-suma-function,translations/en,en)
 
 .PHONY: obs-packages-suma-en
