--- a/antora.yml
+++ b/antora.yml
@@ -1,5 +1,5 @@
 name: suse-manager
-title: SUSE Manager
+title: SUSE Manager Documentation
 
 # Which branch is the default for this playbook.
 version: ~
@@ -17,10 +17,4 @@ nav:
   - modules/ROOT/nav.adoc
   - modules/quickstart/nav-quickstart-guide.adoc
   - modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
-  - modules/client-configuration/nav-client-configuration-guide.adoc
-  - modules/administration/nav-administration-guide.adoc
-  - modules/reference/nav-reference-guide.adoc
-  - modules/retail/nav-retail-guide.adoc
-  - modules/common-workflows/nav-common-workflows-guide.adoc
-  - modules/specialized-guides/nav-specialized-guides-guide.adoc
 
