--- a/.github/workflows/feature_tests_uyuni.yml
+++ b/.github/workflows/feature_tests_uyuni.yml
@@ -11,19 +11,20 @@ jobs:
 
     steps:
     - name: '[CHECKOUT] Checkout branch that triggered this workflow'
-      uses: actions/checkout@v1
-      
-    - name: '[TOOLCHAIN] Set up Ruby 2.7'
+      uses: actions/checkout@v3
+        
+    - name: '[CHECKOUT] Master'
+      uses: actions/checkout@v3
+
+    - name: '[TOOLCHAIN] Set up Ruby 3.0'
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '2.7'
+        ruby-version: '3.0'
 
     - name: '[TOOLCHAIN] Set up NodeJS'
       uses: actions/setup-node@v3
       with:
-        node-version: 14
-      env:
-        NODE_OPTIONS: "--max_old_space_size=4096"
+        node-version: 16
 
     - name: '[TOOLCHAIN] po4a'
       run: |
