--- a/.github/workflows/vale_tests.yml
+++ b/.github/workflows/vale_tests.yml
@@ -6,7 +6,7 @@ jobs:
 
     steps:
     - name: '[CHECKOUT] Checkout branch that triggered this workflow'
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: '[TOOLCHAIN] Set up Ruby 3.0'
       uses: ruby/setup-ruby@v1
@@ -17,7 +17,7 @@ jobs:
       run: gem install asciidoctor
 
     - name: Vale
-      uses: errata-ai/vale-action@v1.4.3
+      uses: errata-ai/vale-action@reviewdog
       with:
         # Optional
         styles: |
