--- a/parameters.yml
+++ b/parameters.yml
@@ -49,7 +49,7 @@ products:
       # webui-branding-YYYY (use for OBS)
       # susecom-branding-YYYY (use for D.S.C)
       supplemental_files: ./branding/supplemental-ui/suma/susecom-2022
-  uyuni:
+uyuni:
     antora:
       name: "uyuni"
       title: "Uyuni"
@@ -66,6 +66,8 @@ products:
         value: false
       - attribute: uyuni-content
         value: true
+      - attribute: page-pagination
+        value: true
     sections: #Used by configure script to create book targets for each language.
       - name: "quickstart"
       - name: "installation-and-upgrade"
@@ -79,9 +81,9 @@ products:
       - attribute: title
         value: "Uyuni Documentation"
       - attribute: start_page
-        value: "uyuni::index"
+        value: "uyuni::index.adoc"
       - attribute: url
-        value: https://www.uyuni-project.org/uyuni-docs/
+        value: /
     ui:
       bundle:
         # Modify the default ui depending on your publishing endpoint
@@ -89,13 +91,13 @@ products:
         # susecom-branding-YYYY-default_ui.zip (use for D.S.C)
         # latest-bundle.zip (translation changes)
         - attribute: url
-          value: ./branding/default-ui/suma/latest-bundle.zip
+          value: ./branding/default-ui/suma/ui-bundle.zip
         - attribute: snapshot
           value: true
       # Modify the custom branding depending on your publishing endpoint
       # webui-branding-YYYY (use for OBS)
       # susecom-branding-YYYY (use for D.S.C)
-      supplemental_files: ./branding/supplemental-ui/uyuni/uyuni-webui
+      supplemental_files: ./branding/supplemental-ui/uyuni/uyuni-2023
 languages: #language parameters
   - langcode: "en"
     locale: "en_US.utf8"
