--- a/parameters.yml
+++ b/parameters.yml
@@ -147,7 +147,7 @@ targets: #Other makefile target not strictly related to book. These targets will
   - name: pdf-tar-suma
     pre_lang_prerequisite: configure-suma
   - name: antora-suma
-    pre_lang_prerequisite: configure-suma copy-branding
+    pre_lang_prerequisite: configure-suma copy-branding 
   - name: obs-packages-suma
     pre_lang_prerequisite: configure-suma clean
   - name: pdf-all-suma
@@ -186,15 +186,15 @@ asciidoc:
   - attribute: sectnumlevels
     value: 5
   - attribute: icons
-    value: font
+    value: font  
   - attribute: experimental
     value: true
   - attribute: susemgr
-    value: "SUSE Manager"
+    value: "SUSE Manager"  
   - attribute: smr
-    value: "for Retail"
+    value: "for Retail"  
   - attribute: uyuni
-    value: Uyuni
+    value: Uyuni  
   - attribute: slepos
     value: "SUSE Linux Enterprise Point of Service"
   - attribute: susemgrproxy
@@ -203,10 +203,10 @@ asciidoc:
     value: "SUSE Linux Enterprise Server"
   - attribute: sle
     value: "SUSE Linux Enterprise"
+  - attribute: sll
+    value: "SUSE Liberty Linux"
   - attribute: es
     value: Expanded Support
-  - attribute: sll
-    value: 'SUSE Liberty Linux'
   - attribute: micro
     value: 'SLE Micro'
   - attribute: microos
@@ -222,7 +222,7 @@ asciidoc:
   - attribute: sleda
     value: SLED
   - attribute: unifiedinstaller
-    value: Unified Installer
+    value: Unified Installer 
     # Clients
   - attribute: alibabaclo
     value: 'Alibaba Cloud Linux'
@@ -281,16 +281,16 @@ asciidoc:
     value: IBM Z
   - attribute: zsystems
     value: IBM Z
-    # Documentation
+    # Documentation 
   - attribute: homepage
     value: https://github.com/uyuni-project/uyuni-docs/
-    # Everything else
+    # Everything else 
   - attribute: grub
     value: Grub
   - attribute: kickstart
     value: Kickstart
   - attribute: webui
-    value: Web UI
+    value: Web UI
   - attribute: jeos
     value: JeOS
   - attribute: minimal
