--- a/.github/workflows/translation_tests_ja_JP.yml
+++ b/.github/workflows/translation_tests_ja_JP.yml
@@ -12,20 +12,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps:
+    steps:  
     - name: '[CHECKOUT] Master'
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
 
-    - name: '[TOOLCHAIN] Set up Ruby 2.6'
-      uses: actions/setup-ruby@v1
+    - name: '[TOOLCHAIN] Set up Ruby 3.0'
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.6.x
+        ruby-version: '3.0'
 
     - name: '[TOOLCHAIN] Set up NodeJS'
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
-        node-version: '10.x'
-    #- run: npm install
+        node-version: 16
 
     - name: '[TOOLCHAIN] po4a'
       run: |
@@ -33,7 +32,6 @@ jobs:
         sudo apt-key add Release.key
         sudo add-apt-repository -y -u 'deb https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Utils/xUbuntu_20.04/ ./'
         sudo apt-get install -y po4a
-
     - name: '[TOOLCHAIN] Install Asciidoctor and Asciidoctor PDF'
       run: |
         gem install asciidoctor
@@ -53,4 +51,3 @@ jobs:
         sudo update-locale LANG=ja_JP.UTF-8
         make configure-uyuni
         make pdf-all-uyuni-ja
-
