--- a/.github/workflows/vale_tests.yml
+++ b/.github/workflows/vale_tests.yml
@@ -6,23 +6,22 @@ jobs:
 
     steps:
     - name: '[CHECKOUT] Checkout branch that triggered this workflow'
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
-    - name: 'Set up Ruby 2.6'
-      uses: actions/setup-ruby@v1
+    - name: '[TOOLCHAIN] Set up Ruby 3.0'
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.6.x
+        ruby-version: '3.0'
 
     - name: 'Install Asciidoctor'
       run: gem install asciidoctor
 
     - name: Vale
-      uses: errata-ai/vale-action@v1.4.3
+      uses: errata-ai/vale-action@reviewdog
       with:
         # Optional
         styles: |
           https://github.com/errata-ai/Google/releases/latest/download/Google.zip
-
         # Optional
         config: https://raw.githubusercontent.com/uyuni-project/uyuni-docs/vale-style-checks-prototype/.vale.ini
 
@@ -30,5 +29,3 @@ jobs:
 
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
-
