Document openSUSE Leap Micro, remove openSUSE MicroOS

--- a/parameters.yml
+++ b/parameters.yml
@@ -211,6 +211,8 @@ asciidoc:
     value: 'SUSE Liberty Linux'
   - attribute: micro
     value: 'SLE Micro'
+  - attribute: leapmicro
+    value: 'openSUSE Leap Micro'
   - attribute: microos
     value: MicroOS
   - attribute: slsa
