--- a/parameters.yml
+++ b/parameters.yml
@@ -37,7 +37,7 @@ products:
       - attribute: start_page
         value: suse-manager::index.adoc
       - attribute: url
-        value: /
+        value: https://documentation.suse.com/suma/4.2/
     ui:
       bundle:
         # Modify the default ui depending on your publishing endpoint
