--- a/branding/pdf/themes/suse-cjk-theme.yml
+++ b/branding/pdf/themes/suse-cjk-theme.yml
@@ -177,8 +177,8 @@ link:
   font-style: italic
   font_size: $base_font_size_medium
 
-# literal is currently used for inline monospaced in prose and table cells
-literal:
+# codespan is currently used for inline monospaced in prose and table cells
+codespan:
   background-color: #ffffff
   font-color: #0C322C
   font-family: Noto Sans CJK SC
@@ -196,7 +196,9 @@ ulist:
       content: "\u2022"
       font_color: $brand_primary_susejungle
 
-menu_caret_content: " <font size=\"1.5em\"><color rgb=\"30BA78\">\u203a</color></font> "
+menu:
+  caret_content: " <font size=\"1.15em\" color=\"#0C322C\">\u203a</font> "
+  font_style: bold
 
 heading:
   align: left
@@ -360,14 +362,14 @@ button:
   background-color: #F2F2F2
   font-family: Noto Sans CJK SC
 
-key:
+kbd:
   separator: "\u2009+\u2009"
   border-radius: 2
   border-width: 1
   font-color: $brand_primary_susepine
   font-size: $base_font_size_medium
 
-blockquote:
+quote:
   font_color: $base_font_color
   font_size: $base_font_size_large
   border_color: $base_border_color
@@ -442,7 +444,7 @@ description_list:
   description_indent: $horizontal_rhythm * 1.25
 
 # Controls
-outline-list:
+list:
   indent: $horizontal_rhythm * 1.5
   marker-font-color: $brand_primary_susejungle
   item-spacing: $vertical_rhythm / 2
