--- a/branding/pdf/themes/uyuni-theme.yml
+++ b/branding/pdf/themes/uyuni-theme.yml
@@ -23,6 +23,7 @@ font:
       bold: notoserif-bold-subset.ttf
       italic: notoserif-italic-subset.ttf
       bold_italic: notoserif-bold_italic-subset.ttf
+    
     # M+ 1mn supports ASCII and the circled numbers used for conums
     M+ 1mn:
       normal: mplus1mn-regular-ascii-conums.ttf
@@ -45,6 +46,7 @@ brand:
   primary:
     susegrn: #25bbbf
     suseblu: #25bbbf
+    uyuniblu: #25BBBF
   preferred:
     lime: #A0FF5F
     grass: #00C081
@@ -119,12 +121,34 @@ horizontal_rhythm: $base_line_height_length
 vertical_spacing: $vertical_rhythm
 link:
   font_color: $brand_elements_link
-# literal is currently used for inline monospaced in prose and table cells
-literal:
+
+# codespan is currently used for inline monospaced in prose and table cells
+codespan:
   font_color: $brand_secondary_magenta
   font_family: M+ 1mn
   font_size: $base_font_size * 1.1
-# menu_caret_content: " <font size=\"1.15em\"><color rgb=\"b12146\">\u203a</color></font> "
+
+button:
+  font-color: $brand_neutral_darkgrey
+  font-size: $base_font_size_normal
+  background-color: $brand_primary_uyuniblu
+  border-color: $brand_neutral_darkgrey
+  border-radius: 3
+  border-offset: 2
+  border-width: .82
+
+kbd:
+  background_color: F5F5F5
+  border_color: CCCCCC
+  border_offset: 2
+  border_radius: 2
+  border_width: 0.5
+  separator: "\u202f+\u202f"
+
+menu:
+  caret_content: " <font size=\"1.15em\" color=\"#0C322C\">\u203a</font> "
+  font_style: bold
+
 heading:
   align: left
   #font_color: 181818
@@ -251,7 +275,7 @@ admonition:
       name: fa-fire
       stroke_color: $brand_elements_error
       size: $base_font_size_ultralarge
-blockquote:
+quote:
   font_color: $base_font_color
   font_size: $base_font_size_large
   border_color: $base_border_color
@@ -311,7 +335,8 @@ description_list:
   term_font_style: bold
   term_spacing: $vertical_rhythm / 4
   description_indent: $horizontal_rhythm * 1.25
-outline_list:
+
+list:
   indent: $horizontal_rhythm * 1.5
   #marker_font_color: 404040
   # NOTE outline_list_item_spacing applies to list items that do not have complex content
