--- a/parameters.yml
+++ b/parameters.yml
@@ -106,7 +106,7 @@ languages: #language parameters
   - langcode: "en"
     locale: "en_US.utf8"
     gnudateformat: "%B %d %Y"
-    pdf_theme_suma: "suse-draft"
+    pdf_theme_suma: "suse"
     pdf_theme_uyuni: "uyuni"
   # - langcode: "cs"
   #   locale: "cs_CZ.UTF-8"
