--- a/branding/pdf/themes/suse-theme.yml
+++ b/branding/pdf/themes/suse-theme.yml
@@ -1,55 +1,86 @@
 ###
 ### This is the AsciiDoctor-PDF export template for SUSE Documentation
 ###
-### Markus Napp (mnapp@suse.com), 2019
+### Joseph Cayouette (jcayouette@suse.com), 2021
 ###
 
 # Define font catalog
 font:
   catalog:
+
+    #SUSE 2021 Font
+    Poppins:
+      normal: Poppins-Regular.ttf
+      bold: Poppins-Medium.ttf
+      italic: Poppins-Light.ttf
+      bold_italic: Poppins-BoldItalic.ttf
+
+    # SUSE 2019 Font
+    Work Sans:
+      normal: WorkSans-Regular.ttf
+      bold: WorkSans-Medium.ttf
+      italic: WorkSans-Light.ttf
+
     Free Serif:
       normal: freeserif.ttf
       bold: freeserif_bold.ttf
       italic: freeserif_italic.ttf
       bold_italic: freeserif_bold_italic.ttf
-    Open Sans:
-      normal: OpenSans-Regular.ttf
-      bold: OpenSans-Bold.ttf
-      italic: OpenSans-Italic.ttf
-      bold_italic: OpenSans-BoldItalic.ttf
+
     Montserrat:
       normal: montserrat-normal.ttf
       bold: montserrat-bold.ttf
       italic: montserrat-italic.ttf
       bold_italic: montserrat-bold_italic.ttf
+
     # Noto Serif supports Latin, Latin-1 Supplement, Latin Extended-A, Greek, Cyrillic, Vietnamese & an assortment of symbols
     Noto Serif:
       normal: notoserif-regular-subset.ttf
       bold: notoserif-bold-subset.ttf
       italic: notoserif-italic-subset.ttf
       bold_italic: notoserif-bold_italic-subset.ttf
+
     # M+ 1mn supports ASCII and the circled numbers used for conums
     M+ 1mn:
       normal: mplus1mn-regular-ascii-conums.ttf
       bold: mplus1mn-bold-ascii.ttf
       italic: mplus1mn-italic-ascii.ttf
       bold_italic: mplus1mn-bold_italic-ascii.ttf
+
     # M+ 1p supports Latin, Latin-1 Supplement, Latin Extended, Greek, Cyrillic, Vietnamese, Japanese & an assortment of symbols
-    # It also provides arrows for ->, <-, => and <= replacements in case these glyphs are missing from font
+    # Provides support for the following glyphs ->, <-, => and <=
     M+ 1p Fallback:
       normal: mplus1p-regular-fallback.ttf
       bold: mplus1p-regular-fallback.ttf
       italic: mplus1p-regular-fallback.ttf
       bold_italic: mplus1p-regular-fallback.ttf
   fallbacks:
-    -  Free Serif #M+ 1p Fallback
+    - M+ 1p Fallback
+
+capfont:
+  font: Poppins Light
 
 brand:
-  font: Open Sans
+  font: Poppins
+  #Free Serif
   # Colors from: https://www.suse.com/brandcentral/suse/identity.php#palette
   primary:
-    susegrn: #02D35F
-    suseblu: #0D2C40
+    susepine: #0C322C
+    susejungle: #30BA78
+    suseseafoam: #7AD4AA
+    suseseafoam20: #e5f7ee
+    suseseafoam60: #afe6cc
+    susefog: #F2F2F2
+    susefog200: #E6E6E6
+    susefog300: #D7D7D7
+    susecoral: #FF6A52
+    susesalmon: #FF8E77
+    susegrn: #30BA78
+    suseblu: #0C322C
+    midnightblue: #192072
+    bluewaterhole: #2453FF
+    mint: #90EBCD
+    persimmon: #FE7C3F
   preferred:
     lime: #A0FF5F
     grass: #00C081
@@ -74,27 +105,32 @@ brand:
     white: #FFFFFF
   # Colors from: https://www.eosdesignsystem.com/colors
   elements:
-    link: #00B2E2
+    link: #30BA78
+    #00B2E2
     warning: #FFC107
     error: #DC3545
     text: #969494
     decoration: #F75C03
     decoration2: #841781
+
 # Configure style and layout of normal pages
 page:
   background_color: #ffffff
   layout: portrait
   margin: [20mm, 27mm, 27mm, 20mm]
-  # margin_inner and margin_outer keys are used for recto/verso print margins when media=press
   margin_inner: 20mm
   margin_outer: 15mm
   size: A4
+
 base:
+  align: justify
   font_size_xxxsmall:  6
   font_size_xxsmall:  7
   font_size_xsmall:  8
   font_size_small: 9.5
-  font_size_normal: 11.15
+  font_size_normal: 9.5
+  font_size_medium: 10.5
+  #11.15
   font_size_large: 12.5
   font_size_xlarge: 14
   font_size_xxlarge: 16
@@ -103,7 +139,6 @@ base:
   font_size_ultralarge: 36
   font_size_hyperlarge: 48
   font_size_min: $base_font_size_xxxsmall
-  align: justify
   # color as hex string (leading # is optional)
   font_color: 333333
   font_family: $brand_font
@@ -121,93 +156,141 @@ vertical_rhythm: $base_line_height_length
 horizontal_rhythm: $base_line_height_length
 # QUESTION should vertical_spacing be block_spacing instead?
 vertical_spacing: $vertical_rhythm
+
+# Links
 link:
-  font_color: $brand_elements_link
-# literal is currently used for inline monospaced in prose and table cells
-literal:
-  font_color: $brand_preferred_grass
-  font_family: M+ 1mn
-  font_size: $base_font_size * 1.1
-# menu_caret_content: " <font size=\"1.15em\"><color rgb=\"b12146\">\u203a</color></font> "
+  font-color: $brand_primary_susejungle
+  font-family: Poppins
+  font-style: italic
+  font_size: $base_font_size_medium
+
+# codespan is currently used for inline monospaced in prose and table cells
+codespan:
+  background-color: #ffffff
+  font-color: #0C322C
+  font-family: Poppins
+  font-style: bold
+  font_size: $base_font_size_xxsmall * 1.3
+
+ulist:
+  marker:
+    font_family: Poppins
+    font_size: 18
+    line_height: 0.4
+    margin: 10
+    font_color: $brand_primary_susejungle
+    disc:
+      content: "\u2022"
+      font_color: $brand_primary_susejungle
+
+menu:
+  caret_content: " <font size=\"1.15em\" color=\"#0C322C\">\u203a</font> "
+  font_style: bold
+
 heading:
   align: left
-  #font_color: 181818
   font_color: #000000
   font_family: $brand_font
   font_style: bold
-  # h1 is used for part titles (book doctype only)
   h1:
-    font_color: $brand_primary_susegrn
+    font_color: $brand_primary_susepine
     font_size: $base_font_size_superlarge
     font_weight: normal
-  # h2 is used for chapter titles (book doctype only)
   h2:
-    font_color: $brand_primary_susegrn
+    font_color: $brand_primary_susejungle
     font_size: $base_font_size_xxxlarge
     font_style: normal
   h3:
-    font_color: $brand_primary_susegrn
+    font_color: $brand_primary_susejungle
     font_size: $base_font_size_xxlarge
     font_style: normal
   h4:
-    font_color: $brand_primary_susegrn
+    font_color: $brand_primary_susejungle
     font_size: $base_font_size_xlarge
     font_style: normal
   h5:
-    font_color: $brand_primary_susegrn
-    font_size: $base_font_size_normal
+    font_color: $brand_primary_susejungle
+    font_size: $base_font_size_large
     font_style: normal
   h6:
-    font_color: $brand_primary_susegrn
-    font_size: $base_font_size_small
-  #line_height: 1.4
-  # correct line height for Noto Serif metrics (comes with built-in line height)
+    font_color: $brand_primary_susejungle
+    font_size: $base_font_size_medium
   line_height: 1
   margin_top: $vertical_rhythm * 0.4
   margin_bottom: $vertical_rhythm * 0.9
-# Configure style and layout of title page
-title_page:
-  #background_color: $brand_primary_suseblu
-  background_image: image:images/title_bg.png[pdfwidth=100%]
-  align: left
-  font-family: $brand_font
-  logo:
-    align: left
-    top: 2%
-    image: image:images/suse_logo_reverse.png[pdfwidth=20%]
-  subtitle:
-    font_color: $brand_primary_susegrn
-    font_size: $heading_h3_font_size
-    font_style: normal
-    line_height: 1
-    margin_top: $base_font_size * 1.25
+
+# Configure layout and style of title page
+extends: default
+role:
   title:
-    font_color: ffffff
-    top: 20%
-    font_size: $heading_h1_font_size
-    line_height: 0.9
+    background-color: #30BA78
+    padding: 20px
+
+# Title Page
+title-page:
+  background-color: #fff
+  font-family: $brand_font
+  align: left
+  background_image: image:images/cloud.jpeg[fit=none, pdfwidth=100%, position=center]
+
+  # Logo
+  logo:
+    top: 90%
+    align: right
+    image: image:images/suse-vert-forlight.svg[pdfwidth=15%]
+
+  # Title
+  title:
+    font_color: #fff
+    font-style: normal
+    top: 5%
+    font_size: $base_font_size_xxxlarge
+    line_height: .7
+    margin-bottom: 10
+    font-family: Poppins
+
+  # Subtitle
+  subtitle:
+    font_color: #0C322C
+    font_style: bold
+    line_height: .7
+    margin_top: $base_font_size * 1.25
+    font_size: $base_font_size_superlarge
+    font-family: Poppins
+
+  # Authors
   authors:
-    font_color: ffffff
+    font_color: #ffffff
     margin_top: $base_font_size * 1.25
     font_size: $base_font_size
+
+  # Product version number and date
   revision:
-    font_color: ffffff
-    margin_top: $base_font_size * 1.25
+    line_height: .7
+    margin-top: 18
+    font-style: italic
+    font-color: #0C322C
+    font-size: $heading_h5_font_size
+    #margin-top: $base_font_size * 1.25
+
 block:
   margin_top: 0
   margin_bottom: $vertical_rhythm
+
 caption:
   align: left
-  font_size: $base_font_size_small
-  font_style: italic
-  font_color: $brand_primary_susegrn
+  font_size: $base_font_size_large
+  font_style: bold
+  font_color: $brand_primary_susejungle
   # FIXME perhaps set line_height instead of / in addition to margins?
   margin_inside: $vertical_rhythm / 3
   #margin_inside: $vertical_rhythm / 4
   margin_outside: 0
+
 lead:
   font_size: $base_font_size_large
   line_height: 1.4
+
 abstract:
   font_color: 5c6266
   font_size: $lead_font_size
@@ -223,7 +306,7 @@ abstract:
 
 # Configure style of admonition boxes (Tip, Note, Warning etc.)
 admonition:
-  column_rule_color: $brand_neutral_lightgrey
+  column_rule_color: $brand_primary_susefog300
   column_rule_width: 2.5
   column_rule_style: dotted
   padding: [0, $horizontal_rhythm, 0, $horizontal_rhythm]
@@ -232,30 +315,43 @@ admonition:
     vertical_align: middle
     font_color: $brand_primary_suseblu
     font_family: $base_font_family
-  # Icons from https://github.com/jessedoyle/prawn-icon packaged with AsciiDoctor-PDF
-  # Shipped version is FontAwesome 5.4.x / https://fontawesome.com/v5.4.1/icons
   icon:
     tip:
       name: fa-lightbulb-o
-      stroke_color: $brand_preferred_grass
-      size: $base_font_size_ultralarge
+      stroke_color: $brand_primary_susejungle
+      size: $base_font_size_xxxlarge
     note:
-      stroke_color: $brand_elements_link
+      stroke_color: $brand_primary_susejungle
       name: fa-info-circle
-      size: $base_font_size_ultralarge
+      size: $base_font_size_xxxlarge
     important:
       name: fa-exclamation-circle
-      stroke_color: $brand_secondary_orange
-      size: $base_font_size_ultralarge
+      stroke_color: $brand_primary_susecoral
+      size: $base_font_size_xxxlarge
     warning:
       name: fa-exclamation-triangle
-      stroke_color: $brand_elements_warning
-      size: $base_font_size_ultralarge
+      stroke_color: $brand_primary_susecoral
+      size: $base_font_size_xxxlarge
     caution:
       name: fa-fire
       stroke_color: $brand_elements_error
-      size: $base_font_size_ultralarge
-blockquote:
+      size: $base_font_size_xxxlarge
+
+# GUI Buttons
+button:
+  font-color: $brand_primary_susepine
+  font-size: $base_font_size_normal
+  background-color: #F2F2F2
+  font-family: Poppins
+
+kbd:
+  separator: "\u2009+\u2009"
+  border-radius: 2
+  border-width: 1
+  font-color: $brand_primary_susepine
+  font-size: $base_font_size_medium
+
+quote:
   font_color: $base_font_color
   font_size: $base_font_size_large
   border_color: $base_border_color
@@ -264,62 +360,78 @@ blockquote:
   padding: [0, $horizontal_rhythm, $block_margin_bottom * -0.75, $horizontal_rhythm + $blockquote_border_width / 2]
   cite_font_size: $base_font_size_small
   cite_font_color: 999999
-# code is used for source blocks (perhaps change to source or listing?)
+
+# Code is used for source blocks
 code:
-  font_color: $base_font_color
-  font_family: $literal_font_family
-  font_size: $base_font_size_small
-  padding: $code_font_size
-  line_height: 1
-  background_color: $brand_neutral_lightergrey
-  border_color: $brand_neutral_grey
-  border_radius: $base_border_radius
-  border_width: 0.75
+  font_color: #0C322C
+  font_family: Poppins
+  font_size: ceil($base_font_size)
+  line_height: 1.0
+  line_gap: 0
+  border_radius: 2
+  padding: 6
+  border_color: #ffffff
+  background_color: #90EBCD
+
+# Conum
 conum:
   font_family: $literal_font_family
   font_color: $brand_primary_susegrn
   font_size: $base_font_size
   line_height: 4 / 3
+
+# Examples
 example:
   border_color: $base_border_color
   border_radius: $base_border_radius
   border_width: 0.75
   background_color: transparent
-  # FIXME reenable padding bottom once margin collapsing is implemented
   padding: [$vertical_rhythm, $horizontal_rhythm, 0, $horizontal_rhythm]
+
+# Images
 image:
   align: center
+  border_color: $brand_primary_susepine
+
+# Prose
 prose:
   margin_top: $block_margin_top
   margin_bottom: $block_margin_bottom
+
+# Sidebar
 sidebar:
-  border_color: $page_background_color
+  background_color: EEEEEE
+  border_color: E1E1E1
   border_radius: $base_border_radius
   border_width: $base_border_width
-  background_color: eeeeee
   # FIXME reenable padding bottom once margin collapsing is implemented
   padding: [$vertical_rhythm, $vertical_rhythm * 1.25, 0, $vertical_rhythm * 1.25]
   title:
     align: center
     font_color: $heading_font_color
-    font_family: $heading_font_family
     font_size: $heading_h4_font_size
     font_style: $heading_font_style
+
 thematic_break:
   border_color: $base_border_color
   border_style: solid
   border_width: $base_border_width
   margin_top: $vertical_rhythm * 0.5
   margin_bottom: $vertical_rhythm * 1.5
+
 description_list:
   term_font_style: bold
   term_spacing: $vertical_rhythm / 4
   description_indent: $horizontal_rhythm * 1.25
-outline_list:
+
+# Controls
+list:
   indent: $horizontal_rhythm * 1.5
-  #marker_font_color: 404040
-  # NOTE outline_list_item_spacing applies to list items that do not have complex content
-  item_spacing: $vertical_rhythm / 2
+  marker-font-color: $brand_primary_susejungle
+  item-spacing: $vertical_rhythm / 2
+  marker-font-size: 18
+
+# Tables
 table:
   background_color: $page_background_color
   head_background_color: f5f5f5
@@ -332,26 +444,38 @@ table:
   border_width: $base_border_width
   # HACK accounting for line-height
   cell_padding: [3, 3, 6, 3]
+
+# Table of Contents
 toc:
   title:
-    font_color: $brand_primary_susegrn
+    font_color: $brand_primary_susepine
   indent: $horizontal_rhythm
   font_family: $brand_font
   font_size: $base_font_size
-  font_color: $brand_primary_suseblu
-  line_height: 1.2
+  font_color: $brand_primary_susejungle
+  line_height: 1.0
   dot_leader:
     content: ". "
-    font_color: $brand_primary_suseblu
+    font_color: $brand_primary_susepine
     levels: 2 3 4 5 6
-  h2_font_color: $brand_primary_susegrn
-  #h2_text_decoration: underline
-  #h5_font_style: italic
-# NOTE in addition to footer, header is also supported
+  h1_font_color: $brand_primary_susepine
+  h1_font_size: $base_font_size_xxlarge
+
+  h2_font_color: $brand_primary_susejungle
+  h2_font_size: $base_font_size_xlarge
+
+  h3_font_color: $brand_primary_susepine
+  h3_font_size: $base_font_size_medium
+
+  h4_font_color: $brand_primary_susepine
+  h4_font_size: $base_font_size_medium
+
+  h5_font_color: $brand_primary_susepine
+  h5_font_size: $base_font_size_small
+
 header:
   font_size: $base_font_size_xsmall
   font_color: #adadad
-  # NOTE if background_color is set, background and border will span width of page
   border_color: dddddd
   border_width: 0.25
   height: 0.75in
@@ -373,8 +497,9 @@ header:
     right:
      content: $header_recto_right_content
 footer:
-  font_size: $base_font_size_xsmall
-  font_color: #adadad
+  font-size: $base_font_size_xsmall
+  font-color: #000
+  font-style: italic
   # NOTE if background_color is set, background and border will span width of page
   border_color: dddddd
   border_width: 0.25
@@ -392,25 +517,25 @@ footer:
   # * {chapter-title}
   # * {section-title}
   # * {section-or-chapter-title}
+
   recto:
     #columns: "<50% =0% >50%"
     left:
-      content: '*{page-number} / {page-count}*'
+      content: '{document-title} | {section-or-chapter-title} '
+
     center:
       content:
+
     right:
-      content: '{section-or-chapter-title} | {productname} {productnumber}'
-      #content: ' | {page-number}'
-    #center:
-    #  content: '{page-number}'
+      content:  '*{page-number} / {page-count}*'
+
   verso:
-    #columns: $footer_recto_columns
     left:
       content: $footer_recto_left_content
+
     center:
       content: $footer_recto_center_content
+
     right:
       content: $footer_recto_right_content
-      #content: '{page-number} | {chapter-title}'
-    #center:
-    #  content: '{page-number}'
+
