SLE Micro / openSUSE MicroOS https://github.com/SUSE/spacewalk/issues/20162 https://github.com/uyuni-project/uyuni-docs/pull/2088

--- a/parameters.yml
+++ b/parameters.yml
@@ -209,6 +209,8 @@ asciidoc:
     value: Expanded Support
   - attribute: micro
     value: 'SLE Micro'
+  - attribute: leapmicro
+    value: 'openSUSE Leap Micro'
   - attribute: microos
     value: MicroOS
   - attribute: slsa
