fix for broken admon

--- a/antora.yml
+++ b/antora.yml
@@ -1,5 +1,5 @@
-name: uyuni
-title: Uyuni
+name: suse-manager
+title: SUSE Manager 4.3 Documentation
 
 # Which branch is the default for this playbook.
 version: ~
