Github actions and params update for 4.2.12

--- a/.github/workflows/translation_tests_cs_CZ.yml
+++ b/.github/workflows/translation_tests_cs_CZ.yml
@@ -3,7 +3,7 @@ name: translation_test_cs_cz
 on:
   push:
     branches:
-      - manager-4.2
+      - manager-4.2-MU-4.2.12
 
 env:
   LANG: "cs_CZ.UTF-8"
