--- a/.github/workflows/translation_tests_es_ES.yml
+++ b/.github/workflows/translation_tests_es_ES.yml
@@ -3,7 +3,7 @@ name: translation_test_es_es
 on:
   push:
     branches:
-      - manager-4.2
+      - manager-4.2-MU-4.2.12
 
 env:
   LANG: "es_ES.UTF-8"
