--- a/.github/workflows/translation_tests_zh_CN.yml
+++ b/.github/workflows/translation_tests_zh_CN.yml
@@ -3,7 +3,7 @@ name: translation_test_zh_cn
 on:
   push:
     branches:
-      - manager-4.2
+      - manager-4.2-MU-4.2.12
 
 env:
   LANG: "zh_CN.UTF-8"
