--- a/.github/workflows/translation_tests_en_US.yml
+++ b/.github/workflows/translation_tests_en_US.yml
@@ -3,7 +3,7 @@ name: translation_test_en_us
 on:
   push:
     branches:
-      - manager-4.2
+      - manager-4.2-MU-4.2.12
 
 env:
   LANG: "en_US.UTF-8"
