--- a/.github/workflows/translation_tests_ja_JP.yml
+++ b/.github/workflows/translation_tests_ja_JP.yml
@@ -3,7 +3,7 @@ name: translation_test_ja_jp
 on:
   push:
     branches:
-      - manager-4.2
+      - manager-4.2-MU-4.2.12
 
 env:
   LANG: "ja_JP.UTF-8"
