update from sle to sles as it had room for confusion and user were trying to migrate opensuse to sled

--- a/parameters.yml
+++ b/parameters.yml
@@ -205,6 +205,8 @@ asciidoc:
     value: "SUSE Manager Proxy"
   - attribute: sles
     value: "SUSE Linux Enterprise Server"
+  - attribute: sled
+    value: "SUSE Linux Enterprise Desktop"
   - attribute: sle
     value: "SUSE Linux Enterprise"
   - attribute: es
